--- a/app/src/main/res/layout/fragment_equipos.xml
+++ b/app/src/main/res/layout/fragment_equipos.xml
@@ -85,7 +85,7 @@
         android:layout_height="55dp"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="345dp"
-        android:text="Button"
+        android:drawableLeft="@drawable/outline_search_24"
         />
 
     <androidx.constraintlayout.widget.ConstraintLayout
