--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,23 +6,23 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/inicioFragment"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/outline_home_24"
             android:title="Inicio" />
         <item
             android:id="@+id/jugadoresFragment"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/outline_person_24"
             android:title="Jugadores" />
         <item
             android:id="@+id/equiposFragment"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/outline_groups_24"
             android:title="Equipos" />
         <item
             android:id="@+id/draftFragment"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/outline_child_care_24"
             android:title="Draft" />
         <item
             android:id="@+id/cambiarDatosFragment"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/outline_sports_basketball_20"
             android:title="Cambiar Datos Perfil" />
     </group>
 
