--- a/app/src/main/res/layout/stats_list.xml
+++ b/app/src/main/res/layout/stats_list.xml
@@ -39,6 +39,7 @@
                 app:layout_constraintStart_toEndOf="@+id/textViewStatsSeasonYear"
                 app:layout_constraintTop_toTopOf="parent"
                 android:background="@drawable/back"
+                android:textSize="12dp"
                 android:gravity="center"
                 android:text="Games Played"
                  />
