--- a/app/src/main/res/layout/fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_inicio.xml
@@ -638,6 +638,8 @@
         app:layout_constraintStart_toEndOf="@+id/labelStatsTPP"
         app:layout_constraintTop_toTopOf="parent" />
 
+
+
     </androidx.cardview.widget.CardView>
 
 
@@ -736,6 +738,13 @@
             android:text="Usuario"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/btnLogout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="300dp"
+            android:text="CERRAR SESIÓN" />
     </androidx.cardview.widget.CardView>
 
 
